IntelliJ code analysis